--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <title>website</title>
   <link rel="stylesheet" href="sstyle.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 </head>
 <body>
-
+   <!--this is my nav bar complete-->
   <div class="navbar">
     
     <div class="nav-links">
@@ -25,8 +29,34 @@
       </div>
     </div>
   </div>
+  <!--this is the end -->
 
-  
 
+
+
+
+ 
+  <div class="icon">
+     <a href="https://www.instagram.com/prabhat__19_" target="_blank">
+      <i class="fab fa-instagram"></i></div>
+    </a>
+  </div>
+  <div class="icon"> 
+       <a href="https://www.facebook.com/yourusername" target="_blank">
+       <i class="fab fa-facebook"></i>
+   </a>
+  </div>
+    <div class="icon">
+        <a href="https://wa.me/9771372232" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+      </a>
+    </div>
+    <div class=" icon">
+         <a href="https://github.com/prabhatkumar798" target="_blank">
+         <i class="fab fa-github"></i>
+      </a>
+    </div>
+
+  </div>
 </body>
 </html>
